Fix standout input text color on dark mode

--- a/frontend/assets/css/app.scss
+++ b/frontend/assets/css/app.scss
@@ -47,3 +47,13 @@ body {
 .footer__bottom {
     background-color: rgba(0, 0, 0, .15);
 }
+
+.q-field {
+    &--standout {
+        &.q-field--highlighted {
+            .q-field__native, .q-field__prefix, .q-field__suffix, .q-field__prepend, .q-field__append, .q-field__input {
+                color: #fff !important;
+            }
+        }
+    }
+}
